--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Roboto+Slab&display=swap" rel="stylesheet">
 
   <!--Link de stilos-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   <link rel="stylesheet" href="./estilos/estilos.css">
 
   <!--link de fav icon-->
@@ -27,7 +28,7 @@
   <a href="https://wa.me/521136002514?text=Me%20gustaría%20saber%20el%20precio%20del%20coche" class="whatsapp"
     target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
 
-  <div class="containerHome">
+  
     <div class="header">
       <div class="logo"> <a href="Index.html">
           <center> <img src="./Imagenes Logo/LOGOJAVIHELADOS_TRANSPARENTE.png" alt="logo Javi Helados" width="400px">
@@ -48,8 +49,15 @@
       
     </div>
 
-    <div class="sectionHome">
-
+  <div class="card col">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./imagenesHeladeria/Banner.jpg" class="d-block w-100" alt="fotoheladeria">
+        </div>
+      </div>
+    </div>
+  </div>
 
     </div>
 
@@ -108,6 +116,8 @@
 
 
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 
 </html>
