agrego keywords, descripcion, y titulos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <meta name="description" content="Javi Helados es una cadena de heladerias artesanales ubicada en el corazón de Microcentro">
+  <meta name="keywords" content="JaviHelados, Javi Helados, heladeria, heladeria artesanal, heladeria de microcentro">
+
   <!---Link WhatsApp-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -21,7 +24,7 @@
   <!--link de fav icon-->
   <link rel="icon" href="./Imagenes Logo/favicon_io_transparente/favicon.ico">
 
-  <title> Javi Helados 🍦</title>
+  <title> Javi Helados 🍦 | Home</title>
 </head>
 
 <body>
