--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,7 +19,7 @@
   <!---Link WhatsApp-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <title> Javi Helados 🍦</title>
+  <title> Javi Helados 🍦 | Contacto</title>
 </head>
 
 <body>
