--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -14,7 +14,7 @@
   <link rel="icon" href="../Imagenes Logo/favicon_io_transparente/favicon.ico">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title> Javi Helados 🍦</title>
+  <title> Javi Helados 🍦 | Sucursales</title>
 </head>
 
 <body>
