--- a/pages/productos.html
+++ b/pages/productos.html
@@ -32,7 +32,7 @@
 <a href="https://wa.me/521136002514?text=Me%20gustaría%20saber%20el%20precio%20del%20coche" class="whatsapp" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
     
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" aria-label="Ninth navbar example">
+    <nav class="navbar navbar-expand-lg" style="background-color: #ffd9f9">
         <div class="container-xl">
             <a class="navbar-brand" href="#">
               <img src="/Imagenes Logo/LOGOJAVIHELADOS_TRANSPARENTE.png" alt="logo Javi Helados" width="150px">
@@ -68,12 +68,12 @@
 </header>
 
 <main>
-    <div class="b-example-divider"></div>
+    
 
   <div class="container col-xxl-8 px-4 py-5">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6">
-        <img src="/imagenesHeladeria/helados-artesanales.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+        <img src="/imagenesHeladeria/helados-artesanales.jpg" class="d-block mx-lg-auto img-fluid" alt="Imagen Helados artesanales" width="700" height="500" loading="lazy">
       </div>
       <div class="col-lg-6">
         <h1 class="display-5 fw-bold lh-1 mb-3">Nuestros Sabores</h1>
@@ -84,9 +84,9 @@
     </div>
   </div>
 
-  <div class="b-example-divider"></div>
 
-  <div class="container">
+
+  <div class="container col-xxl-8 px-4 py-5">
     <div class="box">
       <div class="icon">01</div>
       <div class="content">
@@ -182,9 +182,7 @@
 
 </main>
 
-<footer>
-    <div class="b-example-divider"></div>
-
+<footer style="background-color: #ffd9f9">
 
     <div class="container">
       <footer class="py-5">
@@ -221,7 +219,7 @@
               <div class="d-flex flex-column flex-sm-row w-100 gap-2">
                 <label for="newsletter1" class="visually-hidden">Correo electrónico</label>
                 <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
-                <button class="btn btn-primary" type="button">Subcríbete</button>
+                <button class="btn" style="background-color: #9BC8EB" type="button">Subcríbete</button>
               </div>
             </form>
           </div>
