--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -32,7 +32,7 @@
 
     
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" aria-label="Ninth navbar example">
+    <nav class="navbar navbar-expand-lg" style="background-color: #ffd9f9">
         <div class="container-xl">
             <a class="navbar-brand" href="#">
               <img src="/Imagenes Logo/LOGOJAVIHELADOS_TRANSPARENTE.png" alt="logo Javi Helados" width="150px">
@@ -73,7 +73,7 @@
   <div class="container col-xxl-8 px-4 py-5">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
       <div class="col-10 col-sm-8 col-lg-6">
-        <img src="/imagenesHeladeria/Sobre Nosotros.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+        <img src="/imagenesHeladeria/Sobre Nosotros.jpg" class="d-block mx-lg-auto img-fluid" alt="Imagen Nosotros Javi Helados" width="700" height="500" loading="lazy">
       </div>
       <div class="col-lg-6">
         <h1 class="display-5 fw-bold lh-1 mb-3">Nosotros Javi Helados</h1>
@@ -86,7 +86,7 @@
 
 </main>
 
-<footer>
+<footer style="background-color: #ffd9f9">
     <div class="b-example-divider"></div>
 
 
@@ -125,7 +125,7 @@
               <div class="d-flex flex-column flex-sm-row w-100 gap-2">
                 <label for="newsletter1" class="visually-hidden">Correo electrónico</label>
                 <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
-                <button class="btn btn-primary" type="button">Subcríbete</button>
+                <button class="btn" style="background-color: #9BC8EB" type="button">Subcríbete</button>
               </div>
             </form>
           </div>
@@ -134,20 +134,12 @@
         <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
           <p>&copy; 2022 Javi Helados. Todos los derechos reservados.</p>
           <p>Hecho con ♥ por Sabrina Marzana Mendoza</p>
-          <ul class="list-unstyled d-flex">
-            <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
-            <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
-            <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
-          </ul>
+          
         </div>
       </footer>
     </div>
 
 </footer>
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
